--- a/pom.xml
+++ b/pom.xml
@@ -48,6 +48,10 @@
 				</exclusion>
 			</exclusions>
 		</dependency>
+		<dependency>
+			<groupId>net.sf.jasperreports</groupId>
+			<artifactId>jasperreports</artifactId>
+		</dependency>
 	</dependencies>
 
 	<build>
