--- a/pom.xml
+++ b/pom.xml
@@ -49,8 +49,14 @@
 			</exclusions>
 		</dependency>
 		<dependency>
+			<groupId>com.itextpdf</groupId>
+			<artifactId>itextpdf</artifactId>
+			<version>5.5.13.1</version>
+		</dependency>
+		<dependency>
 			<groupId>net.sf.jasperreports</groupId>
 			<artifactId>jasperreports</artifactId>
+			<version>6.9.0</version>
 		</dependency>
 	</dependencies>
 
